objects/QIDC__OM_Attributes_ims__mdt.object
<CustomObject>
    <description>This object store org manager related attributes.</description>
    <fields>
        <fullName>QIDC__Attribute_Expression_ims__c</fullName>
        <description>This field is used to store OrgManager attribute of download result response. This field will act as an expression field and would allow to prefix or postfix value before saving the value in SF.</description>
        <inlineHelpText>This field is used to store OrgManager attribute of download result response. This field will act as an expression field and would allow to prefix or postfix value before saving the value in SF.</inlineHelpText>
        <label>Attribute Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Attribute_ims__c</fullName>
        <description>Indicates Org Manager field API name.</description>
        <inlineHelpText>Indicates Org Manager field API name.</inlineHelpText>
        <label>Attribute Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__CodeRole_Label_ims__c</fullName>
        <description>Code Role label of the attribute.</description>
        <inlineHelpText>Code Role label of the attribute.</inlineHelpText>
        <label>Code Role Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Code_Role_ims__c</fullName>
        <description>Code group of the attribute.</description>
        <inlineHelpText>Code group of the attribute.</inlineHelpText>
        <label>Code Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Data_Type_ims__c</fullName>
        <description>This represents the Field data type for the Field.</description>
        <inlineHelpText>This represents the Field data type for the Field.</inlineHelpText>
        <label>Data Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>OrgManagerId</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Description_ims__c</fullName>
        <description>This represents the field description.</description>
        <inlineHelpText>This represents the field description.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Entity_ims__c</fullName>
        <description>This represents entity API name in Org Manager.</description>
        <inlineHelpText>This represents entity API name in Org Manager.</inlineHelpText>
        <label>Entity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee_API</fullName>
                </value>
                <value>
                    <fullName>Employee_Address_API</fullName>
                </value>
                <value>
                    <fullName>Employee_Communication_API</fullName>
                </value>
                <value>
                    <fullName>Sales_Area_API</fullName>
                </value>
                <value>
                    <fullName>Sales_Area_Relation_API</fullName>
                </value>
                <value>
                    <fullName>Employee_Sales_Area_API</fullName>
                </value>
                <value>
                    <fullName>Product_API</fullName>
                </value>
                <value>
                    <fullName>Product_Relation_API</fullName>
                </value>
                <value>
                    <fullName>Product_Lot_API</fullName>
                </value>
                <value>
                    <fullName>Product_Sales_Force_API</fullName>
                </value>
                <value>
                    <fullName>Product_Inclusion_API</fullName>
                </value>
                <value>
                    <fullName>Product_Exclusion_API</fullName>
                </value>
                <value>
                    <fullName>Organization_Sales_Area_API</fullName>
                </value>
                <value>
                    <fullName>Individual_Sales_Area_API</fullName>
                </value>
                <value>
                    <fullName>Product_Sales_Area_Exception_API</fullName>
                </value>
                <value>
                    <fullName>Individual_API</fullName>
                </value>
                <value>
                    <fullName>Organization_API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Foreign_Key_Entity_ims__c</fullName>
        <label>Foreign Key Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee_API</fullName>
                </value>
                <value>
                    <fullName>Employee_Address_API</fullName>
                </value>
                <value>
                    <fullName>Sales_Area_API</fullName>
                </value>
                <value>
                    <fullName>Product_API</fullName>
                </value>
                <value>
                    <fullName>Organization_Sales_Area_API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__IsEditable_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the field mapping is editable through mappings screen.</description>
        <inlineHelpText>Defines if the field mapping is editable through mappings screen.</inlineHelpText>
        <label>IsEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__IsVisible_ims__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines if the field is visible on mappings screen.</description>
        <inlineHelpText>Defines if the field is visible on mappings screen.</inlineHelpText>
        <label>IsVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Is_Primary_Key_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Is_Required_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate whether the OM attribute is required or not in mappings.</description>
        <inlineHelpText>This field is used to indicate whether the OM attribute is required or not in mappings.</inlineHelpText>
        <label>Is Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Sort_Order_ims__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Org Manager Attributes</label>
    <pluralLabel>Org Manager Attributes</pluralLabel>
</CustomObject>